# zk-dcap-verifier

./: .gitignore  Cargo.toml  LICENSE  README.md  funding.json
circuits/: Cargo.toml
circuits/src/: base64.rs  dcap_attestation_verifier.rs  lib.rs  sgx_dcap_verifier.rs  tcb_info.rs
circuits/src/table/: mod.rs
crates/common/: Cargo.toml
crates/common/src/: lib.rs
crates/dcap/: Cargo.toml
crates/dcap/assets/: identity.json  tcbinfo.json
crates/dcap/src/: cert.rs  ecdsa_sig.rs  enclave.rs  lib.rs  quote.rs  signature.rs  tcb_info.rs  traits.rs
crates/halo2-secp256r1-circuit/: Cargo.toml
crates/halo2-secp256r1-circuit/configs/: verify_circuit.config
crates/halo2-secp256r1-circuit/src/: aggregator.rs  circuit.rs  lib.rs  verifier.rs
crates/p256-ecdsa/: .gitignore  Cargo.toml  README.md
crates/p256-ecdsa/src/: base.rs  circuit.rs  lib.rs
