[workspace]
resolver = "2"
members = [
    "bin", 
    "crates/p256-ecdsa",
    "crates/dcap-quote",
    "crates/halo2-secp256r1-circuit"
]

[patch."https://github.com/axiom-crypto/halo2-lib.git"]
halo2-base = { git = "https://github.com/CliqueOfficial/halo2-lib", branch = "ec-double-secp256r1" }
halo2-ecc = { git = "https://github.com/CliqueOfficial/halo2-lib", branch = "ec-double-secp256r1" }

[patch.'https://github.com/scroll-tech/halo2-lib.git']
halo2-base = { git = "https://github.com/automata-network/halo2-lib.git", branch = "develop" }
halo2-ecc = { git = "https://github.com/automata-network/halo2-lib.git", branch = "develop" }

[profile.test]
opt-level = 3
debug-assertions = true
