[package]
name = "circuits"
version = "0.1.0"
edition = "2021"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
halo2-base = { branch = "main", default-features = false, features = ["halo2-pse", "display"], git = "https://github.com/CliqueOfficial/halo2-lib-p256.git" }
halo2-ecc = { branch = "main", default-features = false, features = ["halo2-pse", "display"], git = "https://github.com/CliqueOfficial/halo2-lib-p256.git" }

base64 = "0.21"
json = "0.12.4"
serde = "1.0.193"
ff = "0.13.0"
