[package]
name = "halo2-base64"
version = "0.1.0"
edition = "2021"


[dependencies]
halo2-base = { rev = "4c1e704", default-features = false, features = ["halo2-pse", "display"], git = "https://github.com/CliqueOfficial/halo2-lib-zkwebauthn.git" }
halo2-ecc = { rev = "4c1e704", default-features = false, features = ["halo2-pse", "display"], git = "https://github.com/CliqueOfficial/halo2-lib-zkwebauthn.git" }
plotters = { version = "0.3.0", optional = true }
tabbycat = { version = "0.1", features = ["attributes"], optional = true }
base64 = "0.21"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
halo2-dynamic-sha256 = { git = "https://github.com/dcmmc/halo2-dynamic-sha256.git", rev = "6339fde" }

rand_chacha = "0.3.1"
json = "0.12.4"
lazy_static = "1.4.0"
once_cell = "1.17.0"
rand = "0.8.5"
num-bigint = "0.4"
regex = "1.10"
ark-std = { version = "0.3.0", features = ["print-trace"] }

# aggregation
# snark-verifier = { git = "https://github.com/axiom-crypto/snark-verifier.git", tag = "v2023_01_30", default-features = false, features = ["loader_halo2"], optional = true }
# snark_verifier_sdk = { git = "https://github.com/axiom-crypto/snark-verifier.git", package = "snark-verifier-sdk" }
