[package]
name = "dcap"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
chrono = "0.4.33"
der = { version = "0.7.8", features = ["alloc"] }
hex = "0.4.3"
hex-literal = "0.4.1"
p256 = "0.13.2"
pem = "3.0.3"
serde_json = "1.0.113"
sha2 = { version = "0.10.8", default-features = false }
signature = "2.2.0"
x509-cert = "0.2.5"

[dev-dependencies]
base64 = "0.21.7"
