[package]
name = "p256-ecdsa"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
serde_json = "1.0.113"
snark-verifier-sdk = { git = "https://github.com/axiom-crypto/snark-verifier.git" }
