[package]
name = "p256-ecdsa"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
hex = "0.4.3"
serde_json = "1.0.113"
common = { path = "../common/" }


[dev-dependencies]
p256 = { version = "0.13.2", features = ["ecdsa"] }
